japan lang add and check some vocab

--- a/src/locales/eg.json
+++ b/src/locales/eg.json
@@ -14,8 +14,8 @@
     "who_avoided" : "Avoided",
     "who_punished" : "Punished",
     "people_in_cdm" : "Employees who involved in CDM",
-    "goverment_employees" : "Goverment Employees",
-    "positon" : "Position",
+    "government_employees" : "Government Employees",
+    "position" : "Position",
     "offices" : "Offices",
     "ministry" : "Ministry",
     "township" : "Township",
