--- a/src/locales/mm.json
+++ b/src/locales/mm.json
@@ -14,8 +14,8 @@
     "who_avoided" : "ရှောင်တိမ်းနေရသူ",
     "who_punished" : "ပြစ်ဒဏ်ချမှတ်ခံရသူ",
     "people_in_cdm" : "CMD တွင်ပါ၀င်လာသူများ",
-    "goverment_employees" : "အစိုးရ၀န်ထမ်းများ",
-    "positon" : "ကျွမ်းကျင်မှု/ရာထူး",
+    "government_employees" : "အစိုးရ၀န်ထမ်းများ",
+    "position" : "ကျွမ်းကျင်မှု/ရာထူး",
     "offices" : "အစိုးရဌာနများ",
     "ministry" : "၀န်ကြီးဌာန",
     "township" : "မြို့နယ်",
